devel
-----

* Added CMake option `USE_MINIMAL_DEBUGINFO`.
  This option is turned off by default. If turned on, the created binaries
  will contain only a minimum amount of debug symbols, reducing the size
  of the executables. If turned off (which is the default), the binaries
  will contain full debug information, which will make them bigger in size
  unless the debug information is later stripped again.

* Modified the returned error code for calling the `shards()` function on a
  collection in single-server from "internal error" (error number 4) to "shards
  API is only available in cluster" and error number 9, HTTP status code 501.

* Bug-fix: Allow to unlink a view created on a SmartGraphEdge collection.

* If a collection (or database) is dropped during the instantiation of an AQL query,
  the setup code now aborts with an ERROR_QUERY_COLLECTION_LOCK_FAILED and earlier.
  Before the setup code could abort with TRI_ERROR_INTERNAL in the same case.

* Added WINDOW keyword to AQL to allow aggregations on related rows.

* Added new graph method K_PATHS to AQL. This will enumerate all paths between a
  source and a target vertex that match the given length.
  For example, the query
  ```
    FOR path IN 2..4 OUTBOUND K_PATHS "v/source" TO "v/target" GRAPH "g"
      RETURN path
  ```
  will yield all paths in format
    {
      vertices: [v/source, ... , v/target],
      edges: [v/source -> v/1, ...,  v/n -> v/target
    }
  that have length exactly 2 or 3 or 4, start at v/source and end at v/target.
  The order of those paths in the result set is not guaranteed.

* Fixed issue BTS-195: AQL update queries using the `keepNull` option set to
  false had an inconsistent behavior. For example, given a collection `test`
  with an empty document with just key `testDoc`, the following query
  would return different results when running for the first time or the second
  time:

      UPDATE 'testDoc' 
          WITH {test: {sub1: true, sub2: null}} IN test