@@ -95,7 +95,8 @@ void TtlProperties::toVelocyPack(VPackBuilder& builder, bool isActive) const {
   builder.add("frequency", VPackValue(frequency)); 
   builder.add("maxTotalRemoves", VPackValue(maxTotalRemoves));
   builder.add("maxCollectionRemoves", VPackValue(maxCollectionRemoves));
-  builder.add("onlyLoadedCollections", VPackValue(onlyLoadedCollections));
+  // this attribute is hard-coded to false since v3.8, and will be removed later
+  builder.add("onlyLoadedCollections", VPackValue(false));
   builder.add("active", VPackValue(isActive));
   builder.close();
 }
@@ -109,7 +110,6 @@ Result TtlProperties::fromVelocyPack(VPackSlice const& slice) {
     uint64_t frequency = this->frequency;
     uint64_t maxTotalRemoves = this->maxTotalRemoves;
     uint64_t maxCollectionRemoves = this->maxCollectionRemoves;
-    uint64_t onlyLoadedCollections = this->onlyLoadedCollections;
 
     if (slice.hasKey("frequency")) {
       if (!slice.get("frequency").isNumber()) {
@@ -132,17 +132,10 @@ Result TtlProperties::fromVelocyPack(VPackSlice const& slice) {
       }
       maxCollectionRemoves = slice.get("maxCollectionRemoves").getNumericValue<uint64_t>();
     }
-    if (slice.hasKey("onlyLoadedCollections")) {
-      if (!slice.get("onlyLoadedCollections").isBool()) {
-        return Result(TRI_ERROR_BAD_PARAMETER, "expecting boolean value for onlyLoadedCollections");
-      }
-      onlyLoadedCollections = slice.get("onlyLoadedCollections").getBool();
-    }
 
     this->frequency = frequency;
     this->maxTotalRemoves = maxTotalRemoves;
     this->maxCollectionRemoves = maxCollectionRemoves;
-    this->onlyLoadedCollections = onlyLoadedCollections;
 
     return Result();
   } catch (arangodb::basics::Exception const& ex) {
@@ -280,14 +273,6 @@ class TtlThread final : public Thread {
           return;
         }
 
-        if (properties.onlyLoadedCollections &&
-            collection->status() != TRI_VOC_COL_STATUS_LOADED) {
-          // we only care about collections that are already loaded here.
-          // otherwise our check may load them all into memory, and sure this is
-          // something we want to avoid here
-          continue;
-        }
-        
         if (ServerState::instance()->isDBServer() &&
             !collection->followers()->getLeader().empty()) {
           // we are a follower for this shard. do not remove any data here, but
@@ -428,8 +413,8 @@ void TtlFeature::collectOptions(std::shared_ptr<ProgramOptions> options) {
   options->addOption("ttl.max-collection-removes", "maximum number of documents to remove per collection",
                      new UInt64Parameter(&_properties.maxCollectionRemoves));
 
-  options->addOption("ttl.only-loaded-collection", "only consider already loaded collections for removal",
-                     new BooleanParameter(&_properties.onlyLoadedCollections));
+  // the following option was obsoleted in 3.8
+  options->addObsoleteOption("ttl.only-loaded-collection", "only consider already loaded collections for removal", false);
 }
 
 void TtlFeature::validateOptions(std::shared_ptr<ProgramOptions> options) {
