@@ -60,7 +60,6 @@ struct TtlProperties {
   uint64_t frequency = 30 * 1000; // milliseconds
   uint64_t maxTotalRemoves = 1000000;
   uint64_t maxCollectionRemoves = 1000000;
-  bool onlyLoadedCollections = true;
   
   void toVelocyPack(arangodb::velocypack::Builder& out, bool isActive) const;
   Result fromVelocyPack(arangodb::velocypack::Slice const& properties);
