@@ -193,15 +193,6 @@
   }
 
   // //////////////////////////////////////////////////////////////////////////////
-  // / @brief throw-collection-not-loaded
-  // //////////////////////////////////////////////////////////////////////////////
-
-  if (global.THROW_COLLECTION_NOT_LOADED) {
-    exports.throwOnCollectionNotLoaded = global.THROW_COLLECTION_NOT_LOADED;
-    delete global.THROW_COLLECTION_NOT_LOADED;
-  }
-
-  // //////////////////////////////////////////////////////////////////////////////
   // / @brief autoload modules from database
   // //////////////////////////////////////////////////////////////////////////////
 
