@@ -106,8 +106,6 @@ function TtlSuite () {
       assertEqual("number", typeof properties.maxCollectionRemoves);
       assertTrue(properties.hasOwnProperty("maxTotalRemoves"));
       assertEqual("number", typeof properties.maxTotalRemoves);
-      assertTrue(properties.hasOwnProperty("onlyLoadedCollections"));
-      assertEqual("boolean", typeof properties.onlyLoadedCollections);
     },
     
     testSetProperties : function () {
@@ -130,12 +128,6 @@ function TtlSuite () {
         [ { maxTotalRemoves: 100 }, true ],
         [ { maxTotalRemoves: 5000 }, true ],
         [ { maxTotalRemoves: 500000 }, true ],
-        [ { onlyLoadedCollections: null }, false ],
-        [ { onlyLoadedCollections: false }, true ],
-        [ { onlyLoadedCollections: true }, true ],
-        [ { onlyLoadedCollections: 1234 }, false ],
-        [ { onlyLoadedCollections: "foo" }, false ],
-        [ { onlyLoadedCollections: "foo" }, false ],
       ];
 
       values.forEach(function(value) {
